# Gator

./: .gitignore  Dockerfile  README.md  dummy.sh  job.yaml  job_group.yaml  job_tree.yaml  mkdocs.yml  pyproject.toml  setup  setup.cfg  setup.py  test_py.py  test_sh.sh  wrapper.py
.github/workflows/: python-package.yml
docs/: how_it_works.md  index.md  schedulers.md  websocket_api.md
docs/assets/: Icon.afdesign  diagrams.drawio
docs/specs/: cores.md  job.md  job_array.md  job_group.md  license.md  memory.md
examples/: emitter.py  job.yaml  job_array.yaml  job_group.yaml  job_msg_emitter.yaml  job_msg_emitter_10000.yaml  job_msg_emitter_5.yaml  job_sequence.yaml  job_tree.yaml
gator/: __main__.py  babysitter.py  db.py  job_spec.py  launch.py  launch_progress.py  layer.py  logger.py  parent.py  scheduler.py  server.py  tier.py  types.py  wrapper.py
gator-hub/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite-bundle.config.ts  vite.config.ts
gator-hub/src/: App.tsx  index.html  main.tsx
gator-hub/src/features/Dashboard/: index.tsx  theme.tsx
gator-hub/src/features/Dashboard/components/Sider/: index.tsx
gator-hub/src/features/Dashboard/lib/: jobtree.tsx  tree.ts
gator-hub/src/features/JobDashboard/: index.tsx
gator-hub/src/features/JobDashboard/components/: MessageTable.tsx  RegistrationTable.tsx
gator-hub/src/features/JobDashboard/components/Dashboard/: index.tsx  theme.tsx
gator-hub/src/features/JobDashboard/components/Dashboard/components/Sider/: index.tsx
gator-hub/src/features/JobDashboard/components/Dashboard/lib/: tree.ts
gator-hub/src/features/JobDashboard/lib/: jobtree.tsx  readers.ts
gator-hub/src/routes/: index.tsx
gator-hub/src/scss/: styles.scss
gator-hub/src/types/: job.ts
gator/common/: api.py  child.py  client.py  db.py  db_client.py  http_api.py  layer.py  logger.py  progress.py  server.py  summary.py  types.py  utility.py  ws_api.py  ws_client.py  ws_router.py  ws_server.py  ws_wrapper.py
gator/hub/: __main__.py  api.py  app.py  tables.py
gator/scheduler/: __init__.py  common.py  local.py  slurm.py
gator/specs/: __init__.py  common.py  job.py  job_group.py  jobs.py  resource.py
tests/: logger.py  parent.py  test_command.py  test_db.py  test_local_scheduler.py  test_logger.py  test_parent.py  test_scheduler.py  test_server.py  test_tier.py  test_types.py  test_wrapper.py
tests/common/: test_db.py  test_logger.py  test_ws_link.py  test_ws_router.py  test_ws_wrapper.py
tests/specs/: test_job.py  test_job_array.py  test_job_group.py
