[tool.poetry]
name = "gator"
version = "1.0"
description = "Hierarchical job execution and logging"
authors = ["Peter Birch <peter@lightlogic.co.uk>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
plotly = "^5.14.1"
psutil = "^5.9.4"
pandas = "^2.0.0"
kaleido = "0.2.1"
requests = "^2.28.2"
flask = "^2.2.3"
rich = "^13.3.4"
tabulate = "^0.9.0"
pyyaml = "^6.0"
uwsgi = "^2.0.21"
expandvars = "^0.9.0"
websockets = "^11.0.2"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.6"
poethepoet = "^0.19.0"
pytest-asyncio = "^0.21.0"
ruff = "^0.0.267"
mkdocstrings = {extras = ["python"], version = "^0.21.2"}

[tool.poetry.scripts]
gator = "gator.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=gator --cov-branch --cov-report html --cov-report term -x"
testpaths = ["tests"]

[tool.poe.tasks.npm_build]
shell = "cd gator-hub && npm run build"

[tool.poe.tasks.npm_build_dev]
shell = "cd gator-hub && npm run build_dev"

[tool.poe.tasks.uwsgi]
shell = "uwsgi --http 127.0.0.1:8080 --master -p 4 -w gator.hub.app:hub --set react_root=$(PWD)/gator-hub/src/dist"

[tool.poe.tasks.lint]
shell = "poetry run ruff check gator"

[tool.poe.tasks.test]
shell = "poetry run pytest"

[tool.poe.tasks.docs]
shell = "poetry run mkdocs build"

[tool.poe.tasks.docs_serve]
shell = "poetry run mkdocs serve"

[tool.poe.tasks]
hub = ["npm_build", "uwsgi"]
hub_dev = ["npm_build_dev", "uwsgi"]
