[tool.poetry]
name = "gator-eda"
version = "0.1"
description = "Hierarchical job execution and logging"
authors = ["Peter Birch <peter@lightlogic.co.uk>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "gator", from = "." }]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
plotly = "^5.14.1"
psutil = "^5.9.4"
kaleido = "0.2.1"
requests = "^2.28.2"
rich = "^13.3.4"
tabulate = "^0.9.0"
pyyaml = "^6.0"
uwsgi = "^2.0.21"
expandvars = "^0.9.0"
websockets = "^11.0.2"
aiosqlite = "^0.19.0"
quart = "^0.18.4"
# This is a secondary dependency but needs to be specified. https://stackoverflow.com/a/77214086
Werkzeug = "2.3.7"
piccolo = { extras = ["orjson", "postgres", "uvloop"], version = "^0.111.1" }
aiohttp = "^3.8.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.6"
poethepoet = "^0.19.0"
pytest-asyncio = "^0.21.0"
ruff = "^0.6.8"
# mkdocstrings and griffe pinned at versions that work together
mkdocstrings = { extras = ["python"], version = "0.21.2" }
griffe = "0.25.5"

[tool.poetry.scripts]
gator = "gator.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "N", "W", "I", "A", "C4", "PTH", "RUF"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=gator --cov-branch --cov-report html --cov-report term -x"
testpaths = ["tests"]

[tool.poe.tasks.npm_build]
shell = "cd gator-hub && npm run build"

[tool.poe.tasks.npm_build_dev]
shell = "cd gator-hub && npm run build_dev"

[tool.poe.tasks.hub_run]
shell = "GATOR_HUB_ROOT=$(readlink -f gator-hub/dist) python3 -m gator.hub"

[tool.poe.tasks.lint]
shell = "poetry run ruff check gator"

[tool.poe.tasks.test]
shell = "poetry run pytest"

[tool.poe.tasks.example]
shell = """
    poetry run python3 -m gator examples/job.yaml
    poetry run python3 -m gator examples/job_group.yaml
    poetry run python3 -m gator examples/job_array.yaml
    poetry run python3 -m gator examples/job_tree.yaml
    poetry run python3 -m gator examples/job_msg_emitter_5.yaml
"""

[tool.poe.tasks.docs]
shell = "poetry run mkdocs build"

[tool.poe.tasks.docs_serve]
shell = "poetry run mkdocs serve"

[tool.poe.tasks]
hub = ["npm_build", "hub_run"]

[tool.poe.tasks.hub_dev]
help = "Run a hub instance in development mode"
shell = """
cd gator-hub
npm run build_watch &
cd ..
GATOR_HUB_ROOT=$(readlink -f gator-hub/dist) python3 -m gator.hub
"""
